# rttm_manager

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: publication.yaml  pytest.yaml
tests/entity/: test_rttm.py
tests/example_files/: sample1.rttm
tests/service/: test_exporter.py  test_importer.py
